[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/sprites/spaceship_game/bgarcade.png" type="Texture" id=1]
[ext_resource path="res://resources/scenes/spaceship_game/objects/Spaceship.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/scenes/spaceship_game/objects/GameScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/scenes/ui/GameUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://resources/sprites/spaceship_game/newnew.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/spaceship_game/numers.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/spaceship_game/arcade_bg.png" type="Texture" id=8]
[ext_resource path="res://scripts/spaceship_game/SpaceshipGame.gd" type="Script" id=9]
[ext_resource path="res://resources/scenes/ui/Timer.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/scenes/ui/Transition.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 5 )

[node name="SpaceshipGame" type="Node"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ArcadeMachineScreen" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="GameScreen" parent="." instance=ExtResource( 3 )]
position = Vector2( 467.5, -480.5 )

[node name="Spaceship" parent="." instance=ExtResource( 2 )]
position = Vector2( 467.5, 390 )
hor_speed = 150.0
ver_speed = 200.0

[node name="ArcadeMachine" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="ScoreField" type="Sprite" parent="."]
position = Vector2( 620, 180 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="ScoreField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.5
margin_top = -282.5
margin_right = -8.5
margin_bottom = -61.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.294118, 0.439216, 0.811765, 1 )
text = "HIGH
SCORE
4525150
SCORE
4525140
LIVES
1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" parent="." instance=ExtResource( 10 )]
controls_text = "use  wasd"

[node name="GameUI" parent="." instance=ExtResource( 4 )]
visible = false
info_text = "CRASH!"

[node name="Transition" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="finished" from="GameScreen" to="." method="_on_GameScreen_finished"]
[connection signal="crashed" from="Spaceship" to="GameScreen" method="_on_Spaceship_crashed"]
[connection signal="lost_life" from="Spaceship" to="." method="_on_Spaceship_lost_life"]
